--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -90,13 +90,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:text="Vibrate"
         app:layout_constraintBottom_toTopOf="@+id/converted_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_editText"
-        app:layout_constraintVertical_bias="0.024"
-        android:text="Vibrate"/>
+        app:layout_constraintVertical_bias="0.016" />
 
     <TextView
         android:id="@+id/converted_text"
@@ -114,5 +114,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.785" />
+
+    <ImageView
+        android:id="@+id/imageFlashlight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/btn_switch_off"/>
+
+    <Button
+        android:id="@+id/buttonEnable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:text="Enable Camera"
+        android:layout_above="@id/imageFlashlight"
+        android:layout_marginBottom="40dp"/>
 
 </android.support.constraint.ConstraintLayout>
