--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:showIn="@layout/app_bar_main">
+    tools:layout_editor_absoluteY="81dp">
 
     <EditText
         android:id="@+id/input_editText"
