The different activities work

--- a/app/src/main/res/layout/activity_to_text.xml
+++ b/app/src/main/res/layout/activity_to_text.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/grey">
+    tools:context=".ToTextActivity"
+    android:background="@drawable/grey"
+    >
+
 
     <Button
         android:id="@+id/sound_btn"
         android:layout_width="122dp"
         android:layout_height="64dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         android:text="Sound"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.132"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintVertical_bias="0.768" />
 
     <Button
         android:id="@+id/light_btn"
         android:layout_width="124dp"
-        android:layout_height="64dp"
+        android:layout_height="65dp"
         android:layout_marginBottom="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginLeft="1dp"
@@ -38,28 +40,28 @@
         android:text="Light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintHorizontal_bias="0.798"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.858" />
+        app:layout_constraintVertical_bias="0.77" />
 
-    <Button
-        android:id="@+id/vibrate_btn"
-        android:layout_width="124dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="1dp"
-        android:text="Vibration"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.859"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.714" />
+    <!--<Button-->
+        <!--android:id="@+id/vibrate_btn"-->
+        <!--android:layout_width="124dp"-->
+        <!--android:layout_height="64dp"-->
+        <!--android:layout_marginStart="1dp"-->
+        <!--android:layout_marginLeft="1dp"-->
+        <!--android:layout_marginTop="1dp"-->
+        <!--android:layout_marginEnd="1dp"-->
+        <!--android:layout_marginRight="1dp"-->
+        <!--android:layout_marginBottom="1dp"-->
+        <!--android:text="Vibration"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.859"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintVertical_bias="0.714" />-->
 
     <EditText
         android:id="@+id/input_editText"
@@ -98,7 +100,7 @@
         app:srcCompat="@drawable/gear" />
 
     <Button
-        android:id="@+id/toMorse"
+        android:id="@+id/toText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
@@ -129,7 +131,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.09"
         app:srcCompat="@drawable/help" />
 
     <TextView
@@ -189,5 +191,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.017" />
+
 
 </android.support.constraint.ConstraintLayout>
