trying to put a box on the camera view

--- a/app/src/main/res/layout/activity_to_text.xml
+++ b/app/src/main/res/layout/activity_to_text.xml
@@ -217,4 +217,23 @@
         app:layout_constraintVertical_bias="0.923" />
 
 
+    <SurfaceView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop = "true"
+        android:id="@+id/CameraView"
+        />
+
+
+    <SurfaceView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop = "true"
+        android:id="@+id/TransparentView"
+        />
+
+
+
+
+
 </android.support.constraint.ConstraintLayout>
