--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -4,58 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/grey">
-
+    android:background="#CDD3D6">
 
     <Button
         android:id="@+id/to_morse_button"
-        android:layout_width="164dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="175dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginLeft="1dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="1dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:text="To Morse"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/seaside"
+        android:text="Morse"
+        android:textSize="25sp"
+        android:background="@drawable/roundbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/appicon"
-        app:layout_constraintVertical_bias="0.821" />
+        app:layout_constraintHorizontal_bias="0.851"
+        app:layout_constraintStart_toEndOf="@+id/to_text_button"
+        app:layout_constraintTop_toBottomOf="@+id/simpleTextView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/to_text_button"
-        android:layout_width="154dp"
-        android:layout_height="51dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginStart="1dp"
+        android:layout_width="157dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="To Text"
-        app:layout_constraintBottom_toTopOf="@+id/to_morse_button"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/seaside"
+        android:text="Text"
+        android:background="@drawable/roundbutton"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appicon" />
+        app:layout_constraintTop_toBottomOf="@+id/simpleTextView"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/simpleTextView"
+        android:layout_width="229dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:font="@font/josefin_bold"
+        android:text="Translate to:"
+        android:textColor="#000000"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/to_morse_button"
+        app:layout_constraintHorizontal_bias="0.289"
+        app:layout_constraintStart_toEndOf="@+id/to_text_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.775" />
+
 
     <ImageView
         android:id="@+id/appicon"
-        android:layout_width="213dp"
-        android:layout_height="256dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginStart="1dp"
+        android:layout_width="388dp"
+        android:layout_height="372dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/to_text_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.642"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.033"
-        app:srcCompat="@drawable/appicon" />
+        app:layout_constraintVertical_bias="0.0" />
+
+
+
 </android.support.constraint.ConstraintLayout>
